--- a/GameBoyEmulator/GameBoyEmulator.vcxproj
+++ b/GameBoyEmulator/GameBoyEmulator.vcxproj
@@ -85,6 +85,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>C:\Libs\SDL2-2.0.12\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Libs\SDL2-2.0.12\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -143,23 +145,20 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Bus.cpp" />
     <ClCompile Include="Cartridge.cpp" />
     <ClCompile Include="CPU.cpp" />
-    <ClCompile Include="CPU2.cpp" />
     <ClCompile Include="Debugger.cpp" />
-    <ClCompile Include="DMA.cpp" />
     <ClCompile Include="IORegisters.cpp" />
     <ClCompile Include="Joypad.cpp" />
     <ClCompile Include="MBC.cpp" />
     <ClCompile Include="MBC0.cpp" />
     <ClCompile Include="MBC1.cpp" />
-    <ClCompile Include="Opcodes.cpp" />
     <ClCompile Include="PPU.cpp" />
-    <ClCompile Include="Prefixed_opcodes.cpp" />
     <ClCompile Include="test_cpu.cpp" />
     <ClCompile Include="Timer.cpp" />
   </ItemGroup>
@@ -167,9 +166,7 @@
     <ClInclude Include="Bus.h" />
     <ClInclude Include="Cartridge.h" />
     <ClInclude Include="CPU.h" />
-    <ClInclude Include="CPU2.h" />
     <ClInclude Include="Debugger.h" />
-    <ClInclude Include="DMA.h" />
     <ClInclude Include="IORegisters.h" />
     <ClInclude Include="Joypad.h" />
     <ClInclude Include="MBC.h" />
