--- a/GameBoyEmulator/GameBoyEmulator.vcxproj
+++ b/GameBoyEmulator/GameBoyEmulator.vcxproj
@@ -154,27 +154,30 @@
     <ClCompile Include="Cartridge.cpp" />
     <ClCompile Include="CPU.cpp" />
     <ClCompile Include="Debugger.cpp" />
-    <ClCompile Include="IORegisters.cpp" />
     <ClCompile Include="Joypad.cpp" />
     <ClCompile Include="MBC.cpp" />
     <ClCompile Include="MBC0.cpp" />
     <ClCompile Include="MBC1.cpp" />
+    <ClCompile Include="NoiseChannel.h" />
     <ClCompile Include="PPU.cpp" />
     <ClCompile Include="GamerBoi.cpp" />
+    <ClCompile Include="SquareChannel.h" />
     <ClCompile Include="Timer.cpp" />
+    <ClCompile Include="WaveChannel.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="APU.h" />
     <ClInclude Include="Bus.h" />
     <ClInclude Include="Cartridge.h" />
+    <ClInclude Include="Channel.h" />
     <ClInclude Include="CPU.h" />
     <ClInclude Include="Debugger.h" />
-    <ClInclude Include="IORegisters.h" />
     <ClInclude Include="Joypad.h" />
     <ClInclude Include="MBC.h" />
     <ClInclude Include="MBC0.h" />
     <ClInclude Include="MBC1.h" />
     <ClInclude Include="PPU.h" />
+    <ClInclude Include="SweepSquareChannel.h" />
     <ClInclude Include="Timer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
